--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ img{
 
 body{
     margin: 0;
+    padding: 0;
     background-color: var(--bg-color);
     color: var(--text-color);
     font-family: sans-serif;
@@ -45,6 +46,7 @@ body.dark{
     padding: 0 1.5em;
     background-color: var(--bg-card-color);
     transition: var(--transition);
+    width: 100%;
 }
 
 .switches{
@@ -123,17 +125,19 @@ body.dark{
     display: grid;
     padding: 2em;
     gap: 0.5em;
+    max-width: 100%;
 }
 
 @media screen and (min-width: 720px) {
     .main{
-        grid-template-columns:  min-content 1fr;
+        grid-template-columns: min-content 1fr;
     }
 } 
 
 .column {
     display: grid;
-    gap: .5em
+    gap: 0.5em;
+    margin: 0;
 }
 
 @media screen and (min-width: 720px) {
@@ -178,7 +182,7 @@ body.dark{
     text-align: justify;
 }
 
-@media screen and (min-width: 760px) {
+@media screen and (min-width: 720px) {
     .card--project {
         display: grid;
         grid-template-columns: min-content 1fr;
@@ -254,41 +258,11 @@ body.dark{
     --skills-bar-length:90%;
 }
 
-.experience {
-    display: flex;
-    align-items: start;
-    margin-bottom: 1em;
-    padding: 1em;
-    border: 2px solid var(--primary-color);
-    border-radius: var(--border--radius);
-    transition: var(--transition);
-}
-.experience_image {
-    max-width: 15%;
-    margin-right: 1em;
-}
-
-.experience_time {
-    font-size: 0.8rem;
-    margin-bottom: 0.5em;
-}
-.experience_job {
-    margin: 0;
-    margin-bottom: 0.5;
-    color: var(--primary-color);
-    transition: var(--transition);
-}
-
-.experience_description {
-    font-size: 0.8rem;
-    margin-bottom: 1.5em;
-}
-
 .project {
     position: relative;
 }
 
-@media screen and (min-width: 760px) {
+@media screen and (min-width: 720px) {
     .project {
         margin-left: 2em;
     }
@@ -299,12 +273,11 @@ body.dark{
     justify-content: space-between;
     margin: 0.5em 0;
     font-size: .6rem;
-    
 }
 
-@media screen and (min-width: 760px) {
+@media screen and (min-width: 720px) {
     .project_tags{
-        width: 325px;
+        width: 320px;
         font-size: 0.8rem;
     }
 }
@@ -315,7 +288,7 @@ body.dark{
     background-color: var(--primary-color); 
     color: var(--bg-color); 
     transition: var(--transition); 
-    margin-right: 1rem;
+
 } 
 .buttons {
     display: flex;
@@ -323,7 +296,7 @@ body.dark{
     width: 225px;
 }
 
-@media screen and (min-width: 760px) {
+@media screen and (min-width: 720px) {
     .buttons {
         position: absolute;
         bottom: 1em;
