--- a/css/styles.css
+++ b/css/styles.css
@@ -16,12 +16,12 @@ a{
     color: var(--primary-color);
     text-decoration: none;
 }
-
-img{
+img {
     max-width: 100%;
     display: block;
     border-radius: var(--border--radius);
 }
+
 
 body{
     margin: 0;
@@ -121,6 +121,7 @@ body.dark{
     color: var(--primary-color);
     transition: var(--transition);
 }
+
 .main {
     display: grid;
     padding: 2em;
@@ -154,7 +155,7 @@ body.dark{
     border-radius: var(--border--radius);
 }
 
-.card_image-container {
+.card-image-container {
     display: flex;
     min-width: 320px;
     border-radius: var(--border--radius);
@@ -260,44 +261,62 @@ body.dark{
 
 .project {
     position: relative;
+    padding: 1em 2em;
 }
 
-@media screen and (min-width: 720px) {
-    .project {
-        margin-left: 2em;
+@media screen and (max-width: 720px) {
+    .project{
+        padding: 1em 0;
     }
 }
 
-.project_tags {
-    display: flex;
-    justify-content: space-between;
-    margin: 0.5em 0;
-    font-size: .6rem;
-}
-
-@media screen and (min-width: 720px) {
-    .project_tags{
+@media screen and (max-width: 720px) {
+    .project-tags{
         width: 320px;
-        font-size: 0.8rem;
+        font-size: 0.6rem;
+        flex-wrap: wrap;
     }
 }
 
-.project_tag {
+.project-tags {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 0.8rem;
+    margin-bottom: 1rem;
+}
+
+@media screen and (max-width: 720px) {
+    .project-tags{
+        width: 320px;
+        font-size: 0.6rem;
+        flex-wrap: wrap;
+    }
+}
+
+.project-tag {
     padding: 0.4em 0.8em;
     border-radius: var(--border--radius);
     background-color: var(--primary-color); 
     color: var(--bg-color); 
     transition: var(--transition); 
+    margin: 0 1rem 0.5rem 0;
 } 
+
+@media screen and (max-width: 720px) {
+    .project-tag{
+        margin-bottom: 1rem;
+    }
+}
+
 .buttons {
     display: flex;
     justify-content: space-between;
     width: 225px;
 }
 
-@media screen and (min-width: 720px) {
+@media screen and (max-width: 720px) {
     .buttons {
-        position: absolute;
         bottom: 1em;
     }
 }
